--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,28 @@
-name: geospatial
-channels:
+---
+apt:
+  repo_keys: []
+  repos:
+  - 'deb http://archive.ubuntu.com/ubuntu focal main multiverse universe restricted'
+  - 'deb http://archive.ubuntu.com/ubuntu focal-security main multiverse universe restricted'
+  packages:
+  - ncdu
+
+miniconda:
+  name: geo-kernel
+  channels:
   - conda-forge
-dependencies:
-  # Python
+  dependencies:
   - python=3.10
-  # Jupyter Lab
-  - jupyterlab>=3.1.0
-  # Python scientific libraries
   - numpy>=1.20.0
   - numba>=0.53
   - matplotlib>=3.4.0
   - xarray>=0.17
-  # Geospatial libraries
   - rasterio>=1.2.0
   - geopandas>=0.8.0
   - rioxarray>=0.7.0
   - earthpy>=0.9.4
+  - pandas
+  - ipykernel
+  - pip
+  - pip:
+  prefix: /etc/miniconda/envs
