--- a/playbooks/geospatial.yml
+++ b/playbooks/geospatial.yml
@@ -1,8 +1,8 @@
 ---
-- name: Transfer course materials
+- name: Transfer workshop materials
   hosts: localhost
   gather_facts: true
 
   roles:
-    - role: geospatial
+    - role: transfer_workshop_materials
 ...
